add playlist section

--- a/src/app/artists/artist-country-fan-chart/artist-country-fan-chart.component.html
+++ b/src/app/artists/artist-country-fan-chart/artist-country-fan-chart.component.html
@@ -1,4 +1,6 @@
 <div class="chart-wrapper">
+  <p>dafasdf</p>
+
   <ngx-charts-pie-chart [scheme]="colorScheme" [results]="data" [legend]="showLegend" [explodeSlices]="explodeSlices" [labels]="showLabels"
     [doughnut]="doughnut" (select)="onSelect($event)">
   </ngx-charts-pie-chart>
